[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/UI/Chatbox/ChatBox.gd" type="Script" id=1]



[node name="ChatBox" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChatTextPanel" type="Panel" parent="."]
margin_left = 20.6985
margin_top = -216.916
margin_right = 401.699
margin_bottom = -51.9164
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChatText" type="RichTextLabel" parent="."]
margin_left = 28.0
margin_top = -209.0
margin_right = 396.0
margin_bottom = -60.0
bbcode_enabled = true
scroll_following = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UserInput" type="LineEdit" parent="."]
margin_left = 24.4799
margin_top = -44.5612
margin_right = 306.48
margin_bottom = -20.5612
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SendButton" type="Button" parent="."]
margin_left = 313.48
margin_top = -46.5612
margin_right = 390.48
margin_bottom = -19.5612
text = "Send"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="SendButton" to="." method="_on_SendButton_pressed"]
